Minor cleanups.