@@ -81,7 +81,7 @@ public class FileStorage implements Storage {
     return new AbstractMap.SimpleEntry<>(creationDate, collection);
   }
 
-  private Optional<LocalDateTime> readDateFromRecord(CSVRecord record) throws InvalidDataValues {
+  private Optional<LocalDateTime> readDateFromRecord(CSVRecord record) {
     try {
       return Optional.of(LocalDateTime.parse(record.get(0)));
     } catch (DateTimeParseException e) {
@@ -105,8 +105,7 @@ public class FileStorage implements Storage {
       List<String[]> records = new ArrayList<>();
       records.add(new String[] {dateToCollection.getKey().toString()});
       records.addAll(dateToCollection.getValue().stream()
-          .map(values -> values.getValuesRecursive().stream().map(e -> e==null?"":e.toString()).toArray(String[]::new))
-          .collect(Collectors.toList())
+          .map(values -> values.getValuesRecursive().stream().map(e -> e == null ? "" : e.toString()).toArray(String[]::new)).toList()
       );
 
       CSVPrinter printer = new CSVPrinter(outputStream, CSVFormat.INFORMIX_UNLOAD);
